--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,14 +6,15 @@
 
 body {
     padding: 2rem;
-    background-color: #333;
-    color: whitesmoke;
+    background-color: #FFE4E1;
+    color: black;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
     font-size: 2rem;
+    font-family: "Verdana", "Arial", sans-serif;
 }
 
 input, button {
