--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Weather Conditions</title>
+    <title>WeatherWorks!</title>
     <link href = "{{ url_for('static', filename = 'styles/style.css' )}}"
     rel="stylesheet" />
 </head>
 <body>
-    <h1>Get Weather Conditions</h1>
+    <h1>WeatherWorks!</h1>
     <form action="/weather">
         <input type="text" name ="city" id="city" placeholder="Enter a City"/>
         <button type="submit">Submit</button>
